Experiment with Lightning, promising but I'm stuck for now: - Neat way to structure the code, could help scaling DPSGD - But hard to do multiple backward passes for a single step/per sample gradient - Also, support for multi-GPU is a bit young (e.g. batch augmentation hooks) Let's keep an eye on it though

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ albumentations = "^1.0.3"
 opacus = "^0.14.0"
 einops = "^0.3.0"
 loguru = "^0.5.3"
+pytorch-lightning = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
